Allow user to setup multiple conditions and actions for a transaction prediction

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -960,10 +960,14 @@
           "equals_operator_label": "equals",
           "label_action_category": "-- With category --",
           "label_action_wallet": "-- With wallet --",
+          "label_and": "AND",
           "label_condition_category": "-- Category --",
           "label_condition_wallet": "-- Wallet --",
+          "label_or": "OR",
           "label_with": "with",
           "name_label": "Prediction Name",
+          "new_action": "Add Action",
+          "new_condition": "Add Condition",
           "new_title": "New Transaction Prediction",
           "select_placeholder_label": "-- Choose --",
           "sub_header_action": "Then fill",
