--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1021,10 +1021,14 @@
           "equals_operator_label": "é igual a",
           "label_action_category": "-- Com a categoria --",
           "label_action_wallet": "-- Com a carteira --",
+          "label_and": "E",
           "label_condition_category": "-- Categoria --",
           "label_condition_wallet": "-- Carteira --",
+          "label_or": "OU",
           "label_with": "com",
           "name_label": "Nome do Autopreenchimento",
+          "new_action": "Nova Ação",
+          "new_condition": "Nova Condição",
           "new_title": "Novo Autopreenchimento",
           "select_placeholder_label": "-- Escolha --",
           "sub_header_action": "Então preencha",
