--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -396,6 +396,8 @@ pt-BR:
         sub_header_action: Então preencha
         sub_header_edit_condition: Editar Condição
         sub_header_edit_action: Editar Ação
+        label_and: E
+        label_or: OU
         label_with: com
         label_condition_category: '-- Categoria --'
         label_condition_wallet: '-- Carteira --'
@@ -410,6 +412,8 @@ pt-BR:
         select_placeholder_label: '-- Escolha --'
         contains_operator_label: contém
         equals_operator_label: é igual a
+        new_condition: Nova Condição
+        new_action: Nova Ação
       index:
         title: Autopreenchimentos de Transações
         new: Novo Autopreenchimento de Transação
