Apply transaction predictions when creating new transaction

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1035,10 +1035,11 @@
           "label_condition_wallet": "-- Carteira --",
           "label_or": "OU",
           "label_with": "com",
-          "name_label": "Nome do Autopreenchimento",
+          "name_label": "Nome da Transação",
           "new_action": "Nova Ação",
           "new_condition": "Nova Condição",
           "new_title": "Novo Autopreenchimento",
+          "prediction_name_label": "Nome do Autopreenchimento",
           "select_placeholder_label": "-- Escolha --",
           "sub_header_action": "Então preencha",
           "sub_header_conditions": "Quando",
@@ -1046,7 +1047,6 @@
           "sub_header_edit_condition": "Editar Condição",
           "submit": "Salvar",
           "transaction_date_label": "Data da Transação",
-          "transaction_name_label": "Nome da Transação",
           "value_label": "valor",
           "wallet_id_label": "Carteira"
         },
