--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -974,10 +974,11 @@
           "label_condition_wallet": "-- Wallet --",
           "label_or": "OR",
           "label_with": "with",
-          "name_label": "Prediction Name",
+          "name_label": "Transaction Name",
           "new_action": "Add Action",
           "new_condition": "Add Condition",
           "new_title": "New Transaction Prediction",
+          "prediction_name_label": "Prediction Name",
           "select_placeholder_label": "-- Choose --",
           "sub_header_action": "Then fill",
           "sub_header_conditions": "When",
@@ -985,7 +986,6 @@
           "sub_header_edit_condition": "Edit Condition",
           "submit": "Save",
           "transaction_date_label": "Transaction Date",
-          "transaction_name_label": "Transaction Name",
           "value_label": "value",
           "wallet_id_label": "Wallet"
         },
