Add conditions and actions description to transaction predictions index page

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -995,6 +995,8 @@
         },
         "list": {
           "disabled": "Disabled",
+          "label_then": "Then fill",
+          "label_when": "When",
           "reenable_label": "Reenable"
         },
         "show": {
