--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1056,6 +1056,8 @@
         },
         "list": {
           "disabled": "Desabilitado",
+          "label_then": "Então preencha",
+          "label_when": "Quando",
           "reenable_label": "Reabilitar"
         },
         "show": {
