Add transaction predictions menu entry

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -748,6 +748,7 @@
           "sign_out": "Sign Out",
           "sign_up": "Sign Up",
           "transaction_automations": "Transaction Automations",
+          "transaction_predictions": "Transaction Predictions",
           "transactions": "Transactions",
           "wallets": "Wallets"
         }
