--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -49,7 +49,6 @@ en:
         title: Dashboard
         sub_header_recent_transactions: Recent Transactions
         sub_header_category_summary: Categories Summary
-        sub_header_day_chart: Daily Totals
         sub_header_transactions_summary: Summary
         money_in: Money In
         spends: Spends
@@ -238,6 +237,17 @@ en:
         header_account_settings: Account Settings
         empty_first_name_label: '-- First name not set --'
         empty_last_name_label: '-- Last name not set --'
+
+    statistics:
+      daily_totals_chart:
+        title: Daily Totals
+        options_aria_label: Options for Daily Totals Chart
+        display_options_label: Display Options
+        mode_modal_title: Change Chart Mode
+        mode_combined: Combine Spends and Income
+        mode_spends: Only Spend Transactions
+        mode_income: Only Income Transactions
+        mode_both: Both Spends and Income
 
     subcategories:
       form:
