Fix spacing issues on mobile layout

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -932,7 +932,7 @@
           "locale": "Idioma",
           "password": "Senha",
           "reset_form_button": "Desfazer",
-          "save_button": "Salvar Alterações",
+          "save_button": "Salvar",
           "title": "Minha conta"
         }
       },
