--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -17,6 +17,16 @@ pt-BR:
     create:
       error: 'Perfil não encontrado.'
 
+  import_names:
+    create:
+      success: 'Nome de Importação criado com sucesso.'
+      error: 'Nome de Importação não pode ser criado: %{error}'
+    update:
+      success: 'Nome de Importação atualizado com sucesso.'
+      error: 'Nome de Importação não pode ser atualizado: %{error}'
+    destroy:
+      success: 'Nome de Importação removido com sucesso.'
+
   profiles:
     create:
       success: 'Perfil "%{name}" criado com sucesso.'
