Add frontend for for import names CRUD

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -705,6 +705,27 @@
         "sign_up": "Sign Up",
         "unlock_instructions": "Didn't receive unlock instructions?"
       },
+      "import_names": {
+        "confirmation": {
+          "destroy": "Are you sure you want to destroy this import name? This action cannot be undone."
+        },
+        "floating_button_label": "New Import Name",
+        "form": {
+          "cancel": "Cancel",
+          "edit_title": "Edit Import Name",
+          "import_name_label": "Name from import",
+          "new_title": "New Import Name",
+          "submit": "Create",
+          "transaction_name_label": "Name for transaction"
+        },
+        "index": {
+          "new": "New Import Name",
+          "title": "Import Names"
+        },
+        "list": {
+          "name_description": "Import \"%{import_name}\" as \"%{transaction_name}\""
+        }
+      },
       "landing": {
         "title": "Landing"
       },
