--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -64,6 +64,20 @@ en:
       unlock_instructions: Didn't receive unlock instructions?
       confirmation_instructions: Didn't receive confirmation instructions?
 
+    imports:
+      settings:
+        show:
+          title: Import Settings
+          new_import_name: New Import Name
+          sub_header_import_name: "Import Names (%{count})"
+          import_names_menu_aria_label: Import Names Options
+          import_name_info_text: >-
+            Import names are "translations" for the original transaction names from the import source to a
+            transaction name in Finance MicroManager. These are useful as many names, particularly from card
+            transactions have non descriptive names such as "CNC SSP UK LTD". This is actually from Burger King, but
+            it would be almost impossible to know or remember where a particular spend came from just by looking at the
+            original name. Import names can be used to automatically perform this translation and make things easier.
+
     import_names:
       floating_button_label: New Import Name
       confirmation:
