Add new import form, add missing columns to imports table

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -405,6 +405,12 @@
         "success": "Import Name was successfully updated."
       }
     },
+    "imports": {
+      "create": {
+        "error": "Import could not be started: %{error}",
+        "success": "File was successfully uploaded, import started."
+      }
+    },
     "locale_name": "English",
     "number": {
       "currency": {
@@ -727,6 +733,22 @@
         }
       },
       "imports": {
+        "floating_button_label": "Import Transactions",
+        "form": {
+          "cancel": "Cancel",
+          "edit_title": "Import Transactions",
+          "new_title": "Import Transactions",
+          "source_label": "Source Bank",
+          "source_n26_label": "N26",
+          "source_ptsb_label": "PTSB",
+          "source_revolut_label": "Revolut",
+          "submit": "Upload",
+          "wallet_id_label": "Target Wallet"
+        },
+        "index": {
+          "new": "Import Transactions",
+          "title": "Transaction Imports"
+        },
         "settings": {
           "show": {
             "import_name_info_text": "Import names are \"translations\" for the original transaction names from the import source to a transaction name in Finance MicroManager. These are useful as many names, particularly from card transactions have non descriptive names such as \"CNC SSP UK LTD\". This is actually from Burger King, but it would be almost impossible to know or remember where a particular spend came from just by looking at the original name. Import names can be used to automatically perform this translation and make things easier.",
