--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -451,6 +451,12 @@
         "success": "Nome de Importação atualizado com sucesso."
       }
     },
+    "imports": {
+      "create": {
+        "error": "Importação não pode ser iniciada: %{error}",
+        "success": "Arquivo enviado com sucesso, importação iniciada."
+      }
+    },
     "locale_name": "Português",
     "number": {
       "currency": {
@@ -786,6 +792,22 @@
         }
       },
       "imports": {
+        "floating_button_label": "Importar Transações",
+        "form": {
+          "cancel": "Cancelar",
+          "edit_title": "Importar Transações",
+          "new_title": "Importar Transações",
+          "source_label": "Banco de Origem",
+          "source_n26_label": "N26",
+          "source_ptsb_label": "PTSB",
+          "source_revolut_label": "Revolut",
+          "submit": "Enviar",
+          "wallet_id_label": "Carteira Alvo"
+        },
+        "index": {
+          "new": "Importar Transações",
+          "title": "Importações de Transações"
+        },
         "settings": {
           "show": {
             "import_name_info_text": "Nomes de Importação são \"traduções\" dos nomes de transação originais da fonte de importação para um nome de transação no Finance MicroManager. Eles são úteis pois muitos nomes, especialmente vindos de transações de cartões de débito ou crédito têm nomes obscuros como por exemplo \"CNC SSP UK LTD\". Isso na verdade veio do Burger King, mas seria quase impossível saber ou lembrar disso apenas olhando o nome original. Nomes de Importação podem ser usados para fazer essa tradução automaticamente e facilitar sua vida.",
