Allow users to upload file for batch transaction imports

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -321,22 +321,46 @@
       "messages": {
         "accepted": "must be accepted",
         "already_confirmed": "was already confirmed, please try signing in",
+        "aspect_ratio_is_not": "must have an aspect ratio of %{aspect_ratio}",
+        "aspect_ratio_not_landscape": "must be a landscape image",
+        "aspect_ratio_not_portrait": "must be a portrait image",
+        "aspect_ratio_not_square": "must be a square image",
+        "aspect_ratio_unknown": "has an unknown aspect ratio",
         "blank": "can't be blank",
         "confirmation": "doesn't match %{attribute}",
         "confirmation_period_expired": "needs to be confirmed within %{period}, please request a new one",
+        "content_type_invalid": "has an invalid content type",
+        "dimension_height_equal_to": "height must be equal to %{length} pixel",
+        "dimension_height_greater_than_or_equal_to": "height must be greater than or equal to %{length} pixel",
+        "dimension_height_inclusion": "height is not included between %{min} and %{max} pixel",
+        "dimension_height_less_than_or_equal_to": "height must be less than or equal to %{length} pixel",
+        "dimension_max_inclusion": "must be less than or equal to %{width} x %{height} pixel",
+        "dimension_min_inclusion": "must be greater than or equal to %{width} x %{height} pixel",
+        "dimension_width_equal_to": "width must be equal to %{length} pixel",
+        "dimension_width_greater_than_or_equal_to": "width must be greater than or equal to %{length} pixel",
+        "dimension_width_inclusion": "width is not included between %{min} and %{max} pixel",
+        "dimension_width_less_than_or_equal_to": "width must be less than or equal to %{length} pixel",
         "empty": "can't be empty",
         "equal_to": "must be equal to %{count}",
         "even": "must be even",
         "exclusion": "is reserved",
         "expired": "has expired, please request a new one",
+        "file_size_not_between": "file size must be between %{min_size} and %{max_size} (current size is %{file_size})",
+        "file_size_not_greater_than": "file size must be greater than %{min_size} (current size is %{file_size})",
+        "file_size_not_greater_than_or_equal_to": "file size must be greater than or equal to %{min_size} (current size is %{file_size})",
+        "file_size_not_less_than": "file size must be less than %{max_size} (current size is %{file_size})",
+        "file_size_not_less_than_or_equal_to": "file size must be less than or equal to %{max_size} (current size is %{file_size})",
         "greater_than": "must be greater than %{count}",
         "greater_than_or_equal_to": "must be greater than or equal to %{count}",
+        "image_metadata_missing": "is not a valid image",
+        "image_not_processable": "is not a valid image",
         "in": "must be in %{count}",
         "inclusion": "is not included in the list",
         "invalid": "is invalid",
         "invalid_currency": "has invalid format (must be '100', '5%{decimal}24', or '123%{thousands}456%{decimal}78'). Got %{currency}",
         "less_than": "must be less than %{count}",
         "less_than_or_equal_to": "must be less than or equal to %{count}",
+        "limit_out_of_range": "total number is out of range",
         "model_invalid": "Validation failed: %{errors}",
         "not_a_number": "is not a number",
         "not_an_integer": "must be an integer",
@@ -738,6 +762,7 @@
           "cancel": "Cancel",
           "edit_title": "Import Transactions",
           "new_title": "Import Transactions",
+          "source_file_label": "Transaction File to Import",
           "source_label": "Source Bank",
           "source_n26_label": "N26",
           "source_ptsb_label": "PTSB",
