--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -360,22 +360,46 @@
       "messages": {
         "accepted": "deve ser aceito",
         "already_confirmed": "já foi confirmado, por favor logue para continuar",
+        "aspect_ratio_is_not": "não contém uma proporção de %{aspect_ratio}",
+        "aspect_ratio_not_landscape": "não está no formato paisagem",
+        "aspect_ratio_not_portrait": "não está no formato retrato",
+        "aspect_ratio_not_square": "não é uma imagem quadrada",
+        "aspect_ratio_unknown": "não tem uma proporção definida",
         "blank": "não pode ficar em branco",
         "confirmation": "não é igual a %{attribute}",
         "confirmation_period_expired": "deve ser confirmada dentro de %{period}, por favor solicite novamente",
+        "content_type_invalid": "tem um tipo de arquivo inválido",
+        "dimension_height_equal_to": "deve ter altura igual a %{length} pixels",
+        "dimension_height_greater_than_or_equal_to": "deve ter altura maior ou igual a %{length} pixels",
+        "dimension_height_inclusion": "deve ter altura entre %{min} e %{max} pixels",
+        "dimension_height_less_than_or_equal_to": "deve ter altura menor ou igual a %{length} pixels",
+        "dimension_max_inclusion": "deve ser menor ou igual a %{width} x %{height} pixels",
+        "dimension_min_inclusion": "deve ser maior ou igual a %{width} x %{height} pixels",
+        "dimension_width_equal_to": "deve ter largura igual a %{length} pixels",
+        "dimension_width_greater_than_or_equal_to": "deve ter largura maior ou igual a %{length} pixels",
+        "dimension_width_inclusion": "deve ter largura entre %{min} e %{max} pixels",
+        "dimension_width_less_than_or_equal_to": "deve ter largura menor ou igual a %{length} pixels",
         "empty": "não pode ficar vazio",
         "equal_to": "deve ser igual a %{count}",
         "even": "deve ser par",
         "exclusion": "não está disponível",
         "expired": "expirou, por favor solicite um novo",
+        "file_size_not_between": "o tamanho do arquivo deve estar entre %{min_size} e %{max_size} (o tamanho atual é %{file_size})",
+        "file_size_not_greater_than": "o tamanho do arquivo deve ser maior que %{min_size} (o tamanho atual é %{file_size})",
+        "file_size_not_greater_than_or_equal_to": "o tamanho do arquivo deve ser maior ou igual a %{min_size} (o tamanho atual é %{file_size})",
+        "file_size_not_less_than": "o tamanho do arquivo deve ser menor que %{max_size} (o tamanho atual é %{file_size})",
+        "file_size_not_less_than_or_equal_to": "o tamanho do arquivo deve ser menor ou igual a %{max_size} (o tamanho atual é %{file_size})",
         "greater_than": "deve ser maior que %{count}",
         "greater_than_or_equal_to": "deve ser maior ou igual a %{count}",
+        "image_metadata_missing": "não é uma imagem válida",
+        "image_not_processable": "não é uma imagem válida",
         "in": "deve estar em %{count}",
         "inclusion": "não está incluído na lista",
         "invalid": "não é válido",
         "invalid_currency": "has invalid format (must be '100', '5%{decimal}24', or '123%{thousands}456%{decimal}78'). Got %{currency}",
         "less_than": "deve ser menor que %{count}",
         "less_than_or_equal_to": "deve ser menor ou igual a %{count}",
+        "limit_out_of_range": "o número total está fora do limite",
         "model_invalid": "A validação falhou: %{errors}",
         "not_a_number": "não é um número",
         "not_an_integer": "não é um número inteiro",
@@ -797,6 +821,7 @@
           "cancel": "Cancelar",
           "edit_title": "Importar Transações",
           "new_title": "Importar Transações",
+          "source_file_label": "Arquivo de Transações para Importar",
           "source_label": "Banco de Origem",
           "source_n26_label": "N26",
           "source_ptsb_label": "PTSB",
